[package]
name = "widget"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
wayland-cursor = "0.31"
cairo-rs = "0.18"
tempfile = "3.8"
memmap2 = "0.9"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
